compiler/flux_hir/src/tests/snapshots/flux_hir__tests__enums__errors_incorrect_num_args.snap
---
source: compiler/flux_hir/src/tests/enums.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn main() -> () {
let x <unknown type> = Foo::A(0)(0, 0);
}



Diagnostics

[E0039] Error: incorrect number of arguments in enum variant initialization
   ,-[ main.flx:8:12]
   |
 4 |     A -> s32,
   |       ^|^  
   |        `--- expected 1 arguments
   | 
 8 |     let x = Foo::A(0, 0);
   |            ^^^|^^  
   |               `---- incorrect number of arguments in enum variant `A` initialization
   |               |    
   |               `---- got 2 arguments
---'

