compiler/flux_hir/src/tests/snapshots/flux_hir__tests__enums__errors_missing_arg.snap
---
source: compiler/flux_hir/src/tests/enums.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn main() -> () {
let x <unknown type> = Foo::A;
}



Diagnostics

[E0038] Error: missing argument in enum variant initialization
   ,-[ main.flx:8:11]
   |
 4 |     A -> s32,
   |       ^|^  
   |        `--- variant `A` defined here with argument type `s32`
   | 
 8 |     let x = Foo::A;
   |           |  
   |           `-- missing argument in enum variant `A` initialization
---'

