compiler/flux_hir/src/tests/snapshots/flux_hir__tests__enums__errors_type_mismatch_in_args.snap
---
source: compiler/flux_hir/src/tests/enums.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn main() -> () {
let x <unknown type> = Foo::A(0)(0);
}



Diagnostics

[E0040] Error: type mismatch
   ,-[ main.flx:8:13]
   |
 4 |     A -> s32,
   |       ^|^  
   |        `--- `s32`
   | 
 8 |     let x = Foo::A(0.0);
   |             ^|^  
   |              `--- type mismatch between `s32` and `float`
   |              |   
   |              `--- `float`
---'

