compiler/flux_hir/src/tests/snapshots/flux_hir__tests__enums__errors_unuses_generic_params.snap
---
source: compiler/flux_hir/src/tests/enums.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0



Diagnostics

[E0020] Error: unused generic parameters
   ,-[ main.flx:3:10]
   |
 3 | enum Result<A, B, C> {
   |          ^^^^|^^^^  
   |              `------ unused generic parameters `B`
---'

