compiler/flux_hir/src/tests/snapshots/flux_hir__tests__enums__incorrect_num_args.snap
---
source: compiler/flux_hir/src/tests/enums.rs
expression: s
---
//  main.flx

enum Foo {
    A -> s32
}

fn main() -> () {
    let x Foo = Foo::A(0, 0);
}

Diagnostics

[E0039] Error: incorrect number of arguments in enum variant initialization
   ,-[ main.flx:8:12]
   |
 4 |     A -> s32,
   |       ^|^  
   |        `--- expected 1 arguments
   | 
 8 |     let x = Foo::A(0, 0);
   |            ^^^|^^  
   |               `---- incorrect number of arguments in enum variant `A` initialization
   |               |    
   |               `---- got 2 arguments
---'

