compiler/flux_hir/src/tests/snapshots/flux_hir__tests__enums__missing_arg.snap
---
source: compiler/flux_hir/src/tests/enums.rs
expression: s
---
//  main.flx


fn main() -> () {
    let x Foo = Foo::A;
}

Diagnostics

[E0037] Error: missing argument in enum variant initialization
   ,-[ main.flx:8:11]
   |
 4 |     A -> s32,
   |       ^|^  
   |        `--- variant `A` defined here with argument type `s32`
   | 
 8 |     let x = Foo::A;
   |           |  
   |           `-- missing argument in enum variant `A` initialization
---'

