compiler/flux_hir/src/tests/snapshots/flux_hir__tests__enums__type_mismatch.snap
---
source: compiler/flux_hir/src/tests/enums.rs
expression: s
---
//  main.flx

enum Foo {
    A,
    B -> u32
}

fn main() -> () {
    let x Foo = Foo::A;
    let x Foo = Foo::B(0);
}

Diagnostics

[E0041] Error: type mismatch
   ,-[ main.flx:9:9]
   |
 9 |     let x u32 = Foo::A;
   |   ^^|^  ^^^|^^  
   |     `----------- `u32`
   |            |    
   |            `---- type mismatch between `u32` and `Foo`
   |            |    
   |            `---- `Foo`
---'
[E0041] Error: type mismatch
    ,-[ main.flx:10:8]
    |
 10 |     let x u32 = Foo::B(0);
    |  ^^|^  ^^^||^^^^  
    |    `-------------- `u32`
    |           ||      
    |           `------- `Foo`
    |            |      
    |            `------ type mismatch between `u32` and `Foo`
----'

