compiler/flux_hir/src/tests/snapshots/flux_hir__tests__enums__unuses_generic_params.snap
---
source: compiler/flux_hir/src/tests/enums.rs
expression: s
---
//  main.flx



Diagnostics

[E0020] Error: unused generic parameters
   ,-[ main.flx:3:10]
   |
 3 | enum Result<A, B, C> {
   |          ^^^^|^^^^  
   |              `------ unused generic parameters `B`
---'

